2009-08-14  Aidan Kehoe  <kehoea@parhasard.net>

	* minibuf.el (read-from-minibuffer): 
	Use buffer (format " *Minibuf-%d*" (minibuffer-depth)), regardless
	of depth. 

2009-08-10  Aidan Kehoe  <kehoea@parhasard.net>

	* help.el (function-arglist, function-documentation): 
	Deal more gracefully with tabs in the function arglist; in
	function-documentation, when stripping the arglist, pay attention
	to the fact that they may span multiple lines.

2009-08-09  Aidan Kehoe  <kehoea@parhasard.net>

	* faces.el (set-face-background-pixmap-file): 
	Remove some extra parentheses revealed by change set 7757334005ae.

2009-08-07  Mike Sperber  <mike@xemacs.org>

	* window-xemacs.el (set-window-configuration): Add optional
	`set-frame-size-p' argument that determines whether the frame size
	should be restored along with the window configuration.

2009-07-29  Mike Sperber  <mike@xemacs.org>

	* window-xemacs.el (set-window-pixel-width)
	(set-window-pixel-height): Convenience functions, add.
	(restore-saved-window-parameters): Use the above.
	(really-set-window-configuration): Slightly restructure, reindent.

2009-07-28  Mike Sperber  <mike@xemacs.org>

	* startup.el (startup-setup-paths): Use `emacs-data-roots' instead
	of `emacs-roots' where appropriate.

2009-07-28  Mike Sperber  <mike@xemacs.org>

	* startup.el (startup-setup-paths): Print a few more variables
	upon --debug-paths.

2009-07-18  Aidan Kehoe  <kehoea@parhasard.net>

	* files.el (find-file-create-switch-thunk): 
	Check that #'buffer-file-name gives non-nil before trying to
	determine whether that file exists; avoids problems in
	dired. Thank you Mats Lidell!

2009-07-13  Aidan Kehoe  <kehoea@parhasard.net>

	* code-files.el (insert-file-contents): 
	Set the buffer coding system even on error; especially important
	when dealing with nonexistent files. 
	If the `coding-system' property of an undecided coding system is
	itself undecided, don't use that as a value for
	buffer-file-coding-system. 
